horizontal scroll fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,7 +4,6 @@
   margin: auto auto 0 auto;
   min-width: 100vw;
   max-width: 100vw;
-  background-color: red;
 }
 
 .below-navbar-container{
